--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,7 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
-
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+2023 -- 2024
+------
+* ECEN7102, Advanced Topics in Applied Probability and Statistics
+  * Program: MSc in Internet of Things
